--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -38,6 +38,37 @@ body {
   }
 }
 
+.mobileSlider {
+  .swiper-pagination {
+    // bottom: 40px;
+    &-bullet {
+      background: none;
+      opacity: 1;
+      svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        transition: ease-out .3s;
+        &:last-child {
+          opacity: 0;
+        }
+      }
+      &.swiper-pagination-bullet-active {
+        svg {
+          &:last-child {
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+}
+audio:not([controls]) {
+  display: block !important;
+}
+
 .text-base {
   font-weight: 300;
 }
@@ -49,7 +80,7 @@ section {
 .container {
   padding: 0 20px;
   margin: 0 auto;
-  max-width: 1140px;
+  max-width: 1440px;
   @media (min-width:1024px) {
     padding: 0 30px;
   }
