--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -16,10 +16,12 @@ body {
   padding: 0;
   font-size: 17px;
   color: var(--marble, #ECF7FF);
-  &.no-scroll {
-    height: 100vh;
-    overflow: hidden;
-  }
+  height: 100vh;
+  overflow: hidden;
+  // &.no-scroll {
+  //   height: 100vh;
+  //   overflow: hidden;
+  // }
 }
 
 .bg-mobile-image {
